--- a/Kindergarten_Management_System_G4/pom.xml
+++ b/Kindergarten_Management_System_G4/pom.xml
@@ -52,6 +52,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- send mail-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
     <build>
