--- a/Kindergarten_Management_System_G4/pom.xml
+++ b/Kindergarten_Management_System_G4/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
