--- a/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
+++ b/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,16 @@
     <welcome-file-list>
         <welcome-file>Views/LandingPage/LandingPage.jsp</welcome-file>
     </welcome-file-list>
+
+
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.jsp</location>
+    </error-page>
+
 </web-app>
