--- a/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
+++ b/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     </welcome-file-list>
 
 
-    <error-page>
+    <!--<error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/error.jsp</location>
     </error-page>
@@ -16,6 +16,6 @@
     <error-page>
         <error-code>404</error-code>
         <location>/error.jsp</location>
-    </error-page>
+    </error-page>-->
 
 </web-app>
