--- a/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
+++ b/Kindergarten_Management_System_G4/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,10 @@
     </welcome-file-list>
 
 
-    <error-page>
+    <!--<error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/error.jsp</location>
-    </error-page>
+    </error-page>-->
 
     <error-page>
         <error-code>404</error-code>
